--- a/topografiya/templates/geodezis/report/reports.html
+++ b/topografiya/templates/geodezis/report/reports.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 {% block title %} Очеты поступившие на проверку {% endblock %}
-
+{% load i18n %}
 {% block content%}
 
 {% block stylecontent %}
@@ -14,10 +14,10 @@
                 <div class="page-header">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h3>Ҳисоботлар</h3>
+                            <h3>{% trans "Отчеты" %}</h3>
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
-                                <li class="breadcrumb-item active"><a href="{% url 'geodezis_reports' %}">Очеты поступившие на проверку</a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'index' %}">{% trans "Главная" %}</a></li>
+                                <li class="breadcrumb-item active"><a href="{% url 'geodezis_reports' %}">{% trans "Отчеты поступившие на проверку" %}</a></li>
                             </ol>
                         </div>
                     </div>
@@ -27,10 +27,10 @@
                         <div class="card">
                             <div class="card-body">
                                 <ul class="nav nav-tabs" id="icon-tab" role="tablist">
-                                    <li class="nav-item"><a class="nav-link active show" data-bs-toggle="tab" href="#checking-ones" role="tab" aria-controls="profile-icon" aria-selected="false"> Очеты поступившие на проверку {% if checking_ones.count > 0 %}<span class="badge badge-warning rounded-pill">{{ checking_ones.count }}</span>{% endif %}</a></li>
-                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#rejected-ones" role="tab" aria-controls="contact-icon" aria-selected="true">Отчеты, возвращенные после проверки {% if rejected_ones.count > 0 %}<span class="badge badge-danger rounded-pill">{{ rejected_ones.count }}</span>{% endif %}</a></li>
-                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#less-time-ones" role="tab" aria-controls="camera-icon" aria-selected="true"> Краткосрочная работа {% if less_time_ones.count > 0 %}<span class="badge badge-warning rounded-pill">{{ less_time_ones.count }}</span>{% endif %} </a></li>
-                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#aggreed-ones" role="tab" aria-controls="grow-icon" aria-selected="true"> Завершенные {% if aggreed_ones.count > 0 %}<span class="badge badge-success rounded-pill">{{ aggreed_ones.count }}</span>{% endif %}</a></li>
+                                    <li class="nav-item"><a class="nav-link active show" data-bs-toggle="tab" href="#checking-ones" role="tab" aria-controls="profile-icon" aria-selected="false"> {% trans "Отчеты поступившие на проверку" %} {% if checking_ones.count > 0 %}<span class="badge badge-warning rounded-pill">{{ checking_ones.count }}</span>{% endif %}</a></li>
+                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#rejected-ones" role="tab" aria-controls="contact-icon" aria-selected="true">{% trans "Отчеты, возвращенные после проверки" %} {% if rejected_ones.count > 0 %}<span class="badge badge-danger rounded-pill">{{ rejected_ones.count }}</span>{% endif %}</a></li>
+                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#less-time-ones" role="tab" aria-controls="camera-icon" aria-selected="true"> {% trans "Краткосрочная работа" %} {% if less_time_ones.count > 0 %}<span class="badge badge-warning rounded-pill">{{ less_time_ones.count }}</span>{% endif %} </a></li>
+                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#aggreed-ones" role="tab" aria-controls="grow-icon" aria-selected="true"> {% trans "Завершенные" %} {% if aggreed_ones.count > 0 %}<span class="badge badge-success rounded-pill">{{ aggreed_ones.count }}</span>{% endif %}</a></li>
                                 </ul>
 
 
@@ -39,7 +39,7 @@
                                     <div class="tab-pane fade active show" id="checking-ones" role="tabpanel" aria-labelledby="profile-icon-tab">
                                         <div class="row">
                                             {% if checking_ones.count == 0 %}
-                                             <p class="mb-0 m-t-30"> Нет отчеты поступившие на проверку</p>
+                                             <p class="mb-0 m-t-30"> {% trans "Нет отчеты поступившие на проверку" %}</p>
                                             {% endif %}
 
                                              {% for object in checking_ones %}
@@ -47,18 +47,18 @@
                                                                 <div class="file-sidebar ribbon-vertical-right-wrapper">
                                                                     <div class="pricing-plan shadow border-0">
                                                                         <div class="ribbon ribbon-right ribbon-primary">ID : {{ object.object.id }}</div>
-                                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> день</div>
+                                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> {% trans "день" %}</div>
                                                                         <h5>{{ object.object.pdowork.object_name}}</h5>
                                                                         <div class="blog-bottom-content">
-                                                                            <div><b>Заказчик:</b> {{ object.object.pdowork.customer }}</div>
-                                                                        <div><b>Дата заключения договора:</b> {{ object.object.pdowork.agreement_date }}</div>
-                                                                        <div><b>Адрес объекта:</b> {{ object.object.pdowork.object_address }}</div>
+                                                                            <div><b>{% trans "Заказчик" %} :</b> {{ object.object.pdowork.customer }}</div>
+                                                            <div><b>{% trans "Дата заключения договора" %} :</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                            <div><b>{% trans "Адрес объекта" %} :</b> {{ object.object.pdowork.object_address }}</div>
                                                                         </div>
                                                                         <hr>
                                                                         <div class="detail-footer">
                                                                             <a href="{% url 'geodezis_report_checking' id=object.object.id %}">
                                                                                 <button class="btn btn-square btn-outline-primary-2x float-end">
-                                                                                    Подробная информация
+                                                                                     {% trans "Подробная информация" %}
                                                                                 </button>
                                                                             </a>
                                                                         </div>
@@ -75,7 +75,7 @@
                                     <div class="tab-pane fade" id="rejected-ones" role="tabpanel" aria-labelledby="contact-icon-tab">
                                         <div class="row">
                                         {% if rejected_ones.count == 0 %}
-                                             <p class="mb-0 m-t-30">Нет возвращенного отчета</p>
+                                             <p class="mb-0 m-t-30">{% trans "Нет возвращенного отчета" %}</p>
                                         {% endif %}
 
                                         {% for object in rejected_ones %}
@@ -83,13 +83,13 @@
                                                 <div class="file-sidebar ribbon-vertical-right-wrapper">
                                                     <div class="pricing-plan shadow border-0">
                                                         <div class="ribbon ribbon-right ribbon-primary">ID : {{ object.object.id }}</div>
-                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> день</div>
+                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> {% trans "день" %}</div>
                                                         <h5>{{ object.object.pdowork.object_name}}</h5>
                                                         <div class="blog-bottom-content">
-                                                           <div><b>Заказчик:</b> {{ object.object.pdowork.customer }}</div>
-                                                                        <div><b>Дата заключения договора:</b> {{ object.object.pdowork.agreement_date }}</div>
-                                                                        <div><b>Адрес объекта:</b> {{ object.object.pdowork.object_address }}</div>
-                                                            <div class="text-end text-danger"><b>Количество отказов:</b>
+                                                           <<div><b>{% trans "Заказчик" %} :</b> {{ object.object.pdowork.customer }}</div>
+                                                            <div><b>{% trans "Дата заключения договора" %} :</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                            <div><b>{% trans "Адрес объекта" %} :</b> {{ object.object.pdowork.object_address }}</div>
+                                                            <div class="text-end text-danger"><b>{% trans "Количество отказов" %}:</b>
                                                                 <span style="color: #168eea;font-size:30px;">
 
                 <b  class="count" data-all="{% for work in rejecteds %}{% if work.object == object.object %} {{ work.object.id }},{% endif %}{% endfor %}"></b>
@@ -101,7 +101,7 @@
                                                         <div class="detail-footer">
                                                             <a href="{% url 'show_report_geodezis' id=object.object.id %}">
                                                                 <button class="btn btn-square btn-primary float-end" style="width: 100%">
-                                                                    Подробная информация
+                                                                     {% trans "Подробная информация" %}
                                                                 </button>
                                                             </a>
                                                         </div>
@@ -121,7 +121,7 @@
                                         <div class="row">
 
                                          {% if less_time_ones.count == 0 %}
-                                             <p class="mb-0 m-t-30">Нет просроченного отчета</p>
+                                             <p class="mb-0 m-t-30">{% trans "Краткосрочная работа отсутствуют" %}</p>
                                         {% endif %}
 
                                         {% for object in less_time_ones %}
@@ -133,15 +133,15 @@
 {#                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">30</span> Январ 2022</div>#}
 {#                                                        <h5>Обйект ҳақида маълумот</h5>#}
                                                         <div class="blog-bottom-content">
-                                                            <div><b>Заказчик:</b> {{ object.object.pdowork.customer }}</div>
-                                                                        <div><b>Дата заключения договора:</b> {{ object.object.pdowork.agreement_date }}</div>
-                                                                        <div><b>Адрес объекта:</b> {{ object.object.pdowork.object_address }}</div>
+                                                            <div><b>{% trans "Заказчик" %} :</b> {{ object.object.pdowork.customer }}</div>
+                                                            <div><b>{% trans "Дата заключения договора" %} :</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                            <div><b>{% trans "Адрес объекта" %} :</b> {{ object.object.pdowork.object_address }}</div>
                                                         </div>
                                                         <hr>
                                                         <div class="detail-footer">
                                                             <a href="#">
                                                                 <button class="btn btn-square btn-outline-primary-2x">
-                                                                   Подробная информация
+                                                                    {% trans "Подробная информация" %}
                                                                 </button>
                                                             </a>
                                                         </div>
@@ -160,7 +160,7 @@
                                         <div class="row">
 
                                             {% if aggreed_ones.count == 0 %}
-                                                 <p class="mb-0 m-t-30">Нет утвержденной работы</p>
+                                                 <p class="mb-0 m-t-30">{% trans "Утвержденные работы отсутствуют" %}</p>
                                             {% endif %}
 
                                             {% for object in aggreed_ones %}
@@ -168,18 +168,18 @@
                                                 <div class="file-sidebar ribbon-vertical-right-wrapper">
                                                     <div class="pricing-plan shadow border-0">
                                                         <div class="ribbon ribbon-right ribbon-primary">ID : {{ object.object.id }}</div>
-                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> день</div>
+                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> {% trans "день" %}</div>
                                                         <h5>{{ object.object.pdowork.object_name}}</h5>
                                                         <div class="blog-bottom-content">
-                                                            <div><b>Заказчик:</b> {{ object.object.pdowork.customer }}</div>
-                                                            <div><b>Дата заключения договора:</b> {{ object.object.pdowork.agreement_date }}</div>
-                                                            <div><b>Адрес объекта:</b> {{ object.object.pdowork.object_address }}</div>
+                                                            <<div><b>{% trans "Заказчик" %} :</b> {{ object.object.pdowork.customer }}</div>
+                                                            <div><b>{% trans "Дата заключения договора" %} :</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                            <div><b>{% trans "Адрес объекта" %} :</b> {{ object.object.pdowork.object_address }}</div>
                                                         </div>
                                                         <hr>
                                                         <div class="detail-footer">
                                                             <a href="{% url 'show_report' id=object.object.id %}">
                                                                 <button class="btn btn-square btn-outline-primary-2x float-end">
-                                                                   Подробная информация
+                                                                    {% trans "Подробная информация" %}
                                                                 </button>
                                                             </a>
                                                         </div>
