--- a/topografiya/templates/leader/head_komeral/akt_komeral.html
+++ b/topografiya/templates/leader/head_komeral/akt_komeral.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 {% block title %}  АКТ полевого контроля {% endblock %}
-
+{% load i18n %}
 {% block content%}
 
 {% block stylecontent %}
@@ -29,17 +29,17 @@
                 <div class="page-header">
                     <div class="row">
                         <div class="col-sm-10">
-                            <h3>Проверка комерал  контроля</h3>
+                            <h3>{% trans "Проверка комерал  контроля" %}</h3>
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="fa fa-home f-20"></i></a></li>
-                                <li class="breadcrumb-item"><a href="{% url 'leader_komeral_checking' %}">Проверка комерал  контроля</a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'leader_komeral_checking' %}">{% trans "Проверка комерал  контроля" %}</a></li>
                                 <li class="breadcrumb-item" ><a href="{% url 'leader_rejected_komeral_works' id=workerobject.object.id %}">{{ workerobject.object.pdowork.object_name }}</a></li>
-                                <li class="breadcrumb-item" ><a href="{% url 'leader_akt_komeral_form_edit' id=workerobject.object.id %}">АКТ комерал контроля</a></li>
+                                <li class="breadcrumb-item" ><a href="{% url 'leader_akt_komeral_form_edit' id=workerobject.object.id %}">{% trans "АКТ комерал контроля" %}</a></li>
                             </ol>
                         </div>
                          <div class="col-sm-2">
 
-                        <a href="{% url 'leader_rejected_komeral_works' id=workerobject.object.id %}" class="btn btn-primary"> <i class="fa fa-backward"></i> Hазад</a>
+                        <a href="{% url 'leader_rejected_komeral_works' id=workerobject.object.id %}" class="btn btn-primary"> <i class="fa fa-backward"></i> {% trans "Hазад" %}</a>
 
                     </div>
 
@@ -476,7 +476,7 @@
 {#    </script>#}
 
                                 {% if workerobject.status_geodezis_komeral != 1 %}
-                                    <button class="edit_akt btn btn-warning pull-right" id="save_akt" type="button"> <i class="fa fa-save"></i>  Сохранить </button>
+                                    <button class="edit_akt btn btn-warning pull-right" id="save_akt" type="button"> <i class="fa fa-save"></i> {% trans "Сохранить" %}  </button>
                                 {% endif %}
 
                                     <input type="text" name="work_id" id="work_id" value="{{ workerobject.object.id }}" style="display: none">
@@ -512,7 +512,7 @@
         event.preventDefault();
 
         if($('#a61').val() == 0){
-           alert("Заполните поле оценки работы");
+           alert("{% trans 'Заполните поле оценки работы' %}");
         }
         else{
         $.ajax({
