--- a/topografiya/templates/leader/komeral/komeral_works.html
+++ b/topografiya/templates/leader/komeral/komeral_works.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 {% block title %} Работы переданные для полевого контроля  {% endblock %}
-
+{% load i18n %}
 {% block content%}
 
 {% block stylecontent %}
@@ -14,10 +14,10 @@
                 <div class="page-header">
                     <div class="row">
                         <div class="col-sm-12">
-                            <h3>Работы переданные для комерал контроля </h3>
+                            <h3>{% trans "Работы переданные для комерал контроля" %} </h3>
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
-                                <li class="breadcrumb-item active"><a href="{% url 'leader_komeral_works' %}">Работы переданные для полевого контроля </a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'index' %}">{% trans "Главная" %}</a></li>
+                                <li class="breadcrumb-item active"><a href="{% url 'leader_komeral_works' %}">{% trans "Работы переданные для комерал контроля" %} </a></li>
                             </ol>
                         </div>
                     </div>
@@ -27,10 +27,10 @@
                         <div class="card">
                             <div class="card-body">
                                 <ul class="nav nav-tabs" id="icon-tab" role="tablist">
-                                    <li class="nav-item"><a class="nav-link active show" data-bs-toggle="tab" href="#checking-ones" role="tab" aria-controls="profile-icon" aria-selected="false"> Работы переданные для полевого контроля  {% if new_ones.count > 0 %}<span class="badge badge-warning rounded-pill">{{ new_ones.count }}</span>{% endif %}</a></li>
-                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#rejected-ones" role="tab" aria-controls="contact-icon" aria-selected="true">Возвращенные из комерала  контроля {% if rejected_ones.count > 0 %}<span class="badge badge-danger rounded-pill">{{ rejected_ones.count }}</span>{% endif %}</a></li>
-                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#less-time-ones" role="tab" aria-controls="camera-icon" aria-selected="true"> Краткосрочная работа {% if less_time_ones.count > 0 %}<span class="badge badge-warning rounded-pill">{{ less_time_ones.count }}</span>{% endif %} </a></li>
-                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#aggreed-ones" role="tab" aria-controls="grow-icon" aria-selected="true"> Завершенные {% if aggreed_ones.count > 0 %}<span class="badge badge-success rounded-pill">{{ aggreed_ones.count }}</span>{% endif %}</a></li>
+                                    <li class="nav-item"><a class="nav-link active show" data-bs-toggle="tab" href="#checking-ones" role="tab" aria-controls="profile-icon" aria-selected="false"> {% trans "Работы переданные для комерал контроля" %}  {% if new_ones.count > 0 %}<span class="badge badge-warning rounded-pill">{{ new_ones.count }}</span>{% endif %}</a></li>
+                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#rejected-ones" role="tab" aria-controls="contact-icon" aria-selected="true">{% trans "Возвращенные из комерала  контроля" %} {% if rejected_ones.count > 0 %}<span class="badge badge-danger rounded-pill">{{ rejected_ones.count }}</span>{% endif %}</a></li>
+                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#less-time-ones" role="tab" aria-controls="camera-icon" aria-selected="true"> {% trans "Краткосрочная работа" %} {% if less_time_ones.count > 0 %}<span class="badge badge-warning rounded-pill">{{ less_time_ones.count }}</span>{% endif %} </a></li>
+                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#aggreed-ones" role="tab" aria-controls="grow-icon" aria-selected="true"> {% trans "Завершенные" %} {% if aggreed_ones.count > 0 %}<span class="badge badge-success rounded-pill">{{ aggreed_ones.count }}</span>{% endif %}</a></li>
                                 </ul>
 
 
@@ -39,7 +39,7 @@
                                     <div class="tab-pane fade active show" id="checking-ones" role="tabpanel" aria-labelledby="profile-icon-tab">
                                         <div class="row">
                                             {% if new_ones.count == 0 %}
-                                             <p class="mb-0 m-t-30">Нет работы для камерального контроля</p>
+                                             <p class="mb-0 m-t-30">{% trans "Нет работы для камерального контроля" %}</p>
                                             {% endif %}
 
                                              {% for object in new_ones %}
@@ -47,18 +47,18 @@
                                                                 <div class="file-sidebar ribbon-vertical-right-wrapper">
                                                                     <div class="pricing-plan shadow border-0">
                                                                         <div class="ribbon ribbon-right ribbon-primary">ID : {{ object.object.id }}</div>
-                                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> день</div>
+                                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> {% trans "день" %}</div>
                                                                         <h5>{{ object.object.pdowork.object_name}}</h5>
                                                                         <div class="blog-bottom-content">
-                                                                            <div><b>Наименование заказчика:</b> {{ object.object.pdowork.customer }}</div>
-                                                                            <div><b>Дата заключения договора:</b> {{ object.object.pdowork.agreement_date }}</div>
-                                                                            <div><b>Местоположение:</b> {{ object.object.pdowork.object_address }}</div>
+                                                                            <<div><b>{% trans "Наименование заказчика" %}:</b> {{ object.object.pdowork.customer }}</div>
+                                                                            <div><b>{% trans "Дата заключения договора" %}:</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                                            <div><b>{% trans "Местоположение" %}:</b> {{ object.object.pdowork.object_address }}</div>
                                                                         </div>
                                                                         <hr>
                                                                         <div class="detail-footer">
                                                                             <a href="{% url 'checking_komeral_works' id=object.object.id %}">
                                                                                 <button class="btn btn-square btn-outline-primary-2x float-end">
-                                                                                    Подробная информация
+                                                                                    {% trans "Подробная информация" %}
                                                                                 </button>
                                                                             </a>
                                                                         </div>
@@ -75,7 +75,7 @@
                                     <div class="tab-pane fade" id="rejected-ones" role="tabpanel" aria-labelledby="contact-icon-tab">
                                         <div class="row">
                                         {% if rejected_ones.count == 0 %}
-                                             <p class="mb-0 m-t-30">Hет возвращенные работы</p>
+                                              <p class="mb-0 m-t-30">{% trans "Hет возвращенные работы" %}</p>
                                         {% endif %}
 
                                         {% for object in rejected_ones %}
@@ -83,14 +83,14 @@
                                                 <div class="file-sidebar ribbon-vertical-right-wrapper">
                                                     <div class="pricing-plan shadow border-0">
                                                         <div class="ribbon ribbon-right ribbon-primary">ID : {{ object.object.id }}</div>
-                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> день</div>
+                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> {% trans "день" %}</div>
                                                         <h5>{{ object.object.pdowork.object_name}}</h5>
                                                         <div class="blog-bottom-content">
-                                                            <div><b>Наименование заказчика:</b> {{ object.object.pdowork.customer }}</div>
-                                                            <div><b>Дата заключения договора:</b> {{ object.object.pdowork.agreement_date }}</div>
-                                                            <div><b>Местоположение:</b> {{ object.object.pdowork.object_address }}</div>
+                                                            <div><b>{% trans "Наименование заказчика" %}:</b> {{ object.object.pdowork.customer }}</div>
+                                                            <div><b>{% trans "Дата заключения договора" %}:</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                            <div><b>{% trans "Местоположение" %}:</b> {{ object.object.pdowork.object_address }}</div>
 
-                                                            <div class="text-end text-danger"><b>Количество возвращенных:</b>
+                                                            <div class="text-end text-danger"><b>{% trans "Количество отказов" %}:</b>
                                                                 <span style="color: #168eea;font-size:30px;">
                                                                      <b  class="count" data-all="{% for work in rejecteds %}{% if work.workerobject.id == object.object.id %} {{ work.workerobject.id }},{% endif %}{% endfor %}"></b>
                                                                 </span>
@@ -100,7 +100,7 @@
                                                         <div class="detail-footer">
                                                             <a href="{% url 'rejected_komeral_works' id=object.object.id %}">
                                                                 <button class="btn btn-square btn-primary float-end" style="width: 100%">
-                                                                    Подробная информация
+                                                                    {% trans "Подробная информация" %}
                                                                 </button>
                                                             </a>
                                                         </div>
@@ -120,7 +120,7 @@
                                         <div class="row">
 
                                          {% if less_time_ones.count == 0 %}
-                                             <p class="mb-0 m-t-30">Краткосрочная работа отсутствуют</p>
+                                             <p class="mb-0 m-t-30">{% trans "Краткосрочная работа отсутствуют" %}</p>
                                         {% endif %}
 
                                         {% for object in less_time_ones %}
@@ -132,15 +132,15 @@
 {#                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">30</span> Январ 2022</div>#}
 {#                                                        <h5>Обйект ҳақида маълумот</h5>#}
                                                         <div class="blog-bottom-content">
-                                                            <div><b>Наименование заказчика:</b> {{ object.object.pdowork.customer }}</div>
-                                                            <div><b>Дата заключения договора:</b> {{ object.object.pdowork.agreement_date }}</div>
-                                                            <div><b>Местоположение:</b> {{ object.object.pdowork.object_address }}</div>
+                                                            <div><b>{% trans "Наименование заказчика" %}:</b> {{ object.object.pdowork.customer }}</div>
+                                                            <div><b>{% trans "Дата заключения договора" %}:</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                            <div><b>{% trans "Местоположение" %}:</b> {{ object.object.pdowork.object_address }}</div>
                                                         </div>
                                                         <hr>
                                                         <div class="detail-footer">
                                                             <a href="#">
                                                                 <button class="btn btn-square btn-outline-primary-2x">
-                                                                    Подробная информация
+                                                                    {% trans "Подробная информация" %}
                                                                 </button>
                                                             </a>
                                                         </div>
@@ -159,7 +159,7 @@
                                         <div class="row">
 
                                             {% if aggreed_ones.count == 0 %}
-                                                 <p class="mb-0 m-t-30">Утвержденные работы отсутствуют</p>
+                                                 <p class="mb-0 m-t-30">{% trans "Утвержденные работы отсутствуют" %}</p>
                                             {% endif %}
 
                                             {% for object in aggreed_ones %}
@@ -167,18 +167,18 @@
                                                 <div class="file-sidebar ribbon-vertical-right-wrapper">
                                                     <div class="pricing-plan shadow border-0">
                                                         <div class="ribbon ribbon-right ribbon-primary">ID : {{ object.object.id }}</div>
-                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> день</div>
+                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> {% trans "день" %}</div>
                                                         <h5>{{ object.object.pdowork.object_name}}</h5>
                                                         <div class="blog-bottom-content">
-                                                            <div><b>Наименование заказчика:</b> {{ object.object.pdowork.customer }}</div>
-                                                            <div><b>Дата заключения договора:</b> {{ object.object.pdowork.agreement_date }}</div>
-                                                            <div><b>Местоположение:</b> {{ object.object.pdowork.object_address }}</div>
+                                                           <div><b>{% trans "Наименование заказчика" %}:</b> {{ object.object.pdowork.customer }}</div>
+                                                            <div><b>{% trans "Дата заключения договора" %}:</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                            <div><b>{% trans "Местоположение" %}:</b> {{ object.object.pdowork.object_address }}</div>
                                                         </div>
                                                         <hr>
                                                         <div class="detail-footer">
                                                             <a href="{% url 'show_komeral_work' id=object.object.id %}">
                                                                 <button class="btn btn-square btn-outline-primary-2x float-end">
-                                                                    Подробная информация
+                                                                    {% trans "Подробная информация" %}
                                                                 </button>
                                                             </a>
                                                         </div>
